crates/strider-analyze/tests/snapshots/v3__x86__memory__struct_field_store.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
